--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -5,46 +7,39 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<form action="#" method="post">
-        <label for="name">Name:</label>
-        <input type="Text" id="name" name="name" placeholder="Name" required>
-
-        <label for="email">Email:</label>
-        <input type="Email" id="email" name="email" placeholder="Email" required>
-
-        <label>Gender:</label>
-        <input type="Radio" id="gender_m" name="gender" required>
-        <label for="gender_m">Male</label>
-        <input type="Radio" id="gender_f" name="gender" required>
-        <label for="gender_f">Female</label>
-
-        <label for="cars">Car Brands:</label>
-        <select id="cars" name="cars" required>
-            <option value="" disabled>--Please choose an option--</option>
-            <option value="bmw">BMW</option>
-            <option value="audi">Audi</option>
-            <option value="mercedes">Mercedes</option>
-        </select>
-
-        <label for="age">Age:</label>
-        <input type="Number" id="age" name="age" placeholder="Age" required>
-
-        <label for="dob">DOB:</label>
-        <input type="Date" id="dob" name="dob" required>
-
-        <label for="tel">Phone Number:</label>
-        <input type="Tel" id="tel" name="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="xxx-xxx-xxxx">
-
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<br>
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		<br>
+		<label>Gender</label>
+		<input type="radio" id="male" name="gender" required>
+		<label for="male">Male</label>
+		<input type="radio" id="female" name="gender" required>
+		<label for="female">Female</label>
+		<br>
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br>
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" required>
+		<br>
+		<label for="dop">Date of Purchase</label>
+		<input type="date" id="dop" required>
+		<br>
 		<label for="password">Password</label>
-        <input type="Password" id="password" placeholder="Password" required>
-		
-        <label for="tos"><input type="checkbox"heckbox" id="tos" name="tos" required>
-    I agree to the TOS</label>
-
-
-        <button type="submit">Sign Up</button>
-    </form>
+		<input type="password" id="password" required>
+		<br>
+		<button type="submit">Submit</button>
+		<br>
+	</form>
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
